--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
     "serve": "vite preview --port 3000"
   },
   "dependencies": {
+    "@emotion/react": "^11.10.6",
+    "@emotion/styled": "^11.10.6",
+    "@mui/material": "^5.11.11",
+    "@mui/types": "^7.2.3",
     "@types/styled-components": "^5.1.26",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
