--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@emotion/styled": "^11.10.6",
     "@mui/material": "^5.11.11",
     "@mui/types": "^7.2.3",
+    "@mui/x-data-grid": "^5.17.25",
     "@types/styled-components": "^5.1.26",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
