--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
     "@mui/material": "^5.11.11",
     "@mui/types": "^7.2.3",
     "@mui/x-data-grid": "^5.17.25",
+    "@reduxjs/toolkit": "^1.9.3",
     "@types/styled-components": "^5.1.26",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^8.0.5",
     "react-router": "^6.8.1",
     "react-router-dom": "^6.8.1",
     "styled-components": "^5.3.8",
