--- a/package.json
+++ b/package.json
@@ -17,7 +17,10 @@
     "@mui/types": "^7.2.3",
     "@mui/x-data-grid": "^5.17.25",
     "@reduxjs/toolkit": "^1.9.3",
+    "@types/react-redux": "^7.1.25",
     "@types/styled-components": "^5.1.26",
+    "axios": "^1.3.4",
+    "jwt-decode": "^3.1.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.5",
