--- a/package.json
+++ b/package.json
@@ -19,10 +19,13 @@
     "@mui/x-data-grid": "^5.17.25",
     "@reduxjs/toolkit": "^1.9.3",
     "@types/react-redux": "^7.1.25",
+    "@types/react-swipeable-views": "^0.13.1",
     "@types/styled-components": "^5.1.26",
     "axios": "^1.3.4",
     "jwt-decode": "^3.1.2",
+    "notistack": "^3.0.0",
     "react": "^18.2.0",
+    "react-carousel-minimal": "^1.4.1",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.43.3",
     "react-redux": "^8.0.5",
